--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">
+                        We work on all sorts of projects - large and small. 
+                    </h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -24,7 +26,7 @@
                     <h4 class="service-heading">Project management</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-                
+
                 <div class="col-md-4">
 
                     <span class="fa-stack fa-4x">
