--- a/_includes/team.html
+++ b/_includes/team.html
@@ -24,15 +24,20 @@
                 {% endfor %}
             </div>
             <div class="row">
-                {% for member in site.freelancers %}
                 <div class="col-sm-2">
-                    <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                    </div>
+
                 </div>
-                {% endfor %}
+                <div class="col-sm-6">
+                    {% for member in site.freelancers %}
+                    <div class="col-sm-4">
+                        <div class="team-member">
+                            <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                            <h4>{{ member.name }}</h4>
+                            <p class="text-muted">{{ member.position }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
 
         </div>
