--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -214,10 +214,8 @@ fieldset[disabled] .btn-xl.active {
     background: rgba(51, 51, 51, .5);
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    border-radius: 3px;
+    border-radius: 0px;
 }
-
-
 
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
@@ -228,7 +226,8 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #{{ site.color.primary }};
+    /*background-color: #{{ site.color.primary }};*/
+    border: 1px solid #{{ site.color.secondary }};
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
@@ -288,7 +287,7 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
-    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 22px;
     font-style: italic;
     line-height: 22px;
@@ -298,7 +297,7 @@ header .intro-text .intro-lead-in {
 header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 50px;
     font-weight: 700;
     line-height: 50px;
