--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img style="max-width:30px;  margin-top: -10px;" src="{{ site.baseurl }}/img/logos/tamartrades.png" alt="" />
+                    <img style="max-width:30px;  margin-top: -10px;" src="/img/logos/tamartrades.png" alt="" />
                     {{site.title}}
                 </a>
             </div>
@@ -48,13 +48,13 @@
         <div class="container">
             <div class="intro-text">
                 <!--<div class="intro-lead-in">Welcome to Tamar Trades!</div>-->
-                <div class="intro-heading">&nbsp;Building care into&nbsp;<br>&nbsp;construction&nbsp;</div>
+                <div class="intro-heading">&nbsp;Building care into&nbsp;<br>&nbsp;construction&nbsp;<br>&nbsp;in the Tamar Valley&nbsp;</div>
                 <!--<a href="#services" class="page-scroll btn btn-xl">Find out more</a>-->
             </div>
         </div>
     </header>
 <!--
         {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
+          {% if page.title %}<a class="page-link" href="{{ page.url }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
