--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,10 +2,11 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                <div class="col-lg-8 col-lg-push-2 text-center">
+                    <h2 class="section-heading">Building with care in the Tamar Valley</h2>
                     <h3 class="section-subheading text-muted">
-                        We work on all sorts of projects - large and small. 
+                        We work on all sorts of projects - large and small —
+                        in the Tamar valley and surrounding are, including Callington, Tavistock, Launceston, Saltash and Plymouth.
                     </h3>
                 </div>
             </div>
