--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
                     <h3 class="section-subheading text-muted">
-                        These are just some of the projects we've completed recently. 
+                        These are just some of the projects we've completed recently. For more details of any of these projects, please do <a href="#contact">contact us</a>.
                     </h3>
                 </div>
             </div>
