first cut content from justin

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,11 @@
 <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-6 col-lg-push-3 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading contact-extra">
+                        Use the form below, or if you prefer you can also email <a href="mailto:tamartrades@gmail.com?subject=website enquiry">tamartrades@gmail.com</a>, call the office on 01579 382632, or call Justin on 07977 249386.
+                    </h3>
                 </div>
             </div>
             <div class="row">
@@ -42,7 +44,7 @@
 
             <div class="row contact-extra">
                 <div class="col-lg-12">
-                    If you prefer, you can also email <a href="mailto:tamartrades@gmail.com?subject=website enquiry">tamartrades@gmail.com</a>, call the office on 01579 382632, or call Justin on 07977 249386.
+
                 </div>
             </div>
         </div>
