--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,32 +10,61 @@
                     </h3>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-4">
+                    <div class=" text-center">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa  fa-home fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">General Building</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    </div>
+                    <p class="text-muted">We offer a complete range of building services, including:
+                        <ul class="text-left text-muted">
+                            <li>New builds and extensions </li>
+                            <li>Traditional roofing </li>
+                            <li>Fiberglass flat roofing </li>
+                            <li>Plastering and rendering  ,external and internal</li>
+                            <li>Painting and decoration </li>
+                            <li>Upvc doors and windows </li>
+                            <li>Carpentry </li>
+                            <li>Joinery </li>
+                            <li>Plumbing </li>
+                            <li>Electrics </li>
+                            <li>Guttering and fascia </li>
+                            <li>Porches </li>
+                            <li>Kitchens and bathrooms </li>
+                            <li>Patios and fencing</li>
+                        </ul>
+                        </p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa  fa-book fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Project management</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <div class=" text-center">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa  fa-book fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Project management</h4>
+                    </div>
+                    <p class="text-muted">
+                    Many people underestimate the complexity of even medium-sized building projects — especially without recent knowledge of the construction industry. </p>
+
+                    <p class="text-muted">
+                    We have extensive experience of both new build and larger extension projects, and find that by providing project and site-management services we can help clients plan their design, control costs, and avoid disappointments. </p>
                 </div>
 
                 <div class="col-md-4">
+                    <div class=" text-center">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-wrench  fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Property management</h4>
+                    </div>
+                    <p class="text-muted">
+                        Regular maintenance can reduce costs and increase satisfaction of tenants, avoiding lost income.
+                        We work with a number of landlords and letting agencies to provide reliable and responsive maintenance services.</p>
 
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-wrench  fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Maintenance</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
             </div>
         </div>
