--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,7 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/{{ member.pic }}" class="img-responsive img-circle" alt="">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
@@ -27,11 +27,11 @@
                 <div class="col-sm-2">
 
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-9">
                     {% for member in site.freelancers %}
                     <div class="col-sm-3">
                         <div class="team-member">
-                            <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                            <img src="img/team/{{ member.pic }}" class="img-responsive img-circle" alt="">
                             <h4>{{ member.name }}</h4>
                             <p class="text-muted">{{ member.position }}</p>
                         </div>
