--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,6 +13,21 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class=" text-center">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa  fa-book fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Project management</h4>
+                    </div>
+                    <p class="text-muted">
+                    Many people underestimate the complexity of even medium-sized building projects — especially without recent knowledge of the construction industry. </p>
+
+                    <p class="text-muted">
+                    We have extensive experience of both new build and larger extension projects, and find that by providing project and site-management services we can help clients plan their design, control costs, and avoid disappointments. </p>
+                </div>
+
+                <div class="col-md-4">
+                    <div class=" text-center">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa  fa-home fa-stack-1x fa-inverse"></i>
@@ -38,20 +53,7 @@
                         </ul>
                         </p>
                 </div>
-                <div class="col-md-4">
-                    <div class=" text-center">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa  fa-book fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="service-heading">Project management</h4>
-                    </div>
-                    <p class="text-muted">
-                    Many people underestimate the complexity of even medium-sized building projects — especially without recent knowledge of the construction industry. </p>
 
-                    <p class="text-muted">
-                    We have extensive experience of both new build and larger extension projects, and find that by providing project and site-management services we can help clients plan their design, control costs, and avoid disappointments. </p>
-                </div>
 
                 <div class="col-md-4">
                     <div class=" text-center">
@@ -59,7 +61,7 @@
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-wrench  fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="service-heading">Property management</h4>
+                        <h4 class="service-heading">Property maintenance</h4>
                     </div>
                     <p class="text-muted">
                         Regular maintenance can reduce costs and increase satisfaction of tenants, avoiding lost income.
