--- a/_includes/about.html
+++ b/_includes/about.html
@@ -43,7 +43,7 @@
                             </div>
                             <li class="timeline-inverted">
                                 <div class="timeline-image">
-                                    <h4>See how<br> we can<br> help!</h4>
+                                    <h4>How<br>can we<br> help?</h4>
                                 </div>
                             </li>
                         </li>
