--- a/_includes/team.html
+++ b/_includes/team.html
@@ -2,14 +2,15 @@
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-push-2 text-center">
+                <div class="col-lg-6 col-lg-push-3 text-center">
                     <h2 class="section-heading">Strength in numbers</h2>
                     <h3 class="section-subheading text-muted">In addition to our core team, we have established relationships with a large pool of talented local tradespeople and can draw in additonal resources at short notice when required.</h3>
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-6 col-lg-push-3 text-center">
                 {% for member in site.people %}
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/{{ member.pic }}" class="img-responsive img-circle" alt="">
                         <h4>{{ member.name }}</h4>
@@ -22,7 +23,14 @@
                     </div>
                 </div>
                 {% endfor %}
+                </div>
             </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-push-2">
+                    <img class="img-responsive img-thumbnail" src="/img/xxx.png" alt="" />
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-sm-2">
 
