--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img style="max-width:30px;  margin-top: -10px;" src="/img/logos/tamartrades.png" alt="" />
-                    {{site.title}}
-                </a>
+                
+                <div class="logo-bg">
+                    <a class="navbar-brand page-scroll " style="color: #A6CF42 !important;" href="#page-top">
+                        <img style="max-width:30px;  margin-top: -10px;" src="/img/logos/tamartrades.png" alt="" />
+                        {{site.title}}
+                    </a>
+                </div>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
