--- a/_includes/team.html
+++ b/_includes/team.html
@@ -25,11 +25,12 @@
                 {% endfor %}
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-8 col-lg-push-2">
                     <img class="img-responsive img-thumbnail" src="/img/xxx.png" alt="" />
                 </div>
             </div>
+            -->
 
             <div class="row">
                 <div class="col-sm-2">
