--- a/_includes/about.html
+++ b/_includes/about.html
@@ -38,7 +38,7 @@
                                     <h4 class="subheading">Tamar Trades Ltd formed</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Tamar Trades was formed in 2012, bringing together local tradespeople to deliver larger projects across the Tamar Valley. Tamar Trades now draws on team of 10 carpenters, electricians, plumbers and general builders.</p>
+                                    <p class="text-muted">Tamar Trades was formed in 2012, bringing together local tradespeople to deliver larger projects across the Tamar Valley. Tamar Trades now draws on team of carpenters, electricians, plumbers and general builders.</p>
                                 </div>
                             </div>
                             <li class="timeline-inverted">
