--- a/_includes/services.html
+++ b/_includes/services.html
@@ -6,7 +6,7 @@
                     <h2 class="section-heading">Building with care in the Tamar Valley</h2>
                     <h3 class="section-subheading text-muted">
                         We work on all sorts of projects - large and small —
-                        in the Tamar valley and surrounding are, including Callington, Tavistock, Launceston, Saltash and Plymouth.
+                        in the Tamar valley and surrounding areas, including Callington, Tavistock, Launceston, Saltash and Plymouth.
                     </h3>
                 </div>
             </div>
