--- a/_includes/services.html
+++ b/_includes/services.html
@@ -38,7 +38,7 @@
                         <ul class="text-left text-muted">
                             <li>New builds and extensions </li>
                             <li>Traditional roofing </li>
-                            <li>Fiberglass flat roofing </li>
+                            <li>Fibreglass flat roofing </li>
                             <li>Plastering and rendering  ,external and internal</li>
                             <li>Painting and decoration </li>
                             <li>Upvc doors and windows </li>
